# minomaly-legacy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.template  README.md  appveyor.yml  engine.sublime-project  generate_example.py
examples/assets/runner/: scene_0.json
examples/src/__template/: CMakeLists.txt  __template.cpp  __template.h  main.cpp
examples/src/alpha/: alpha.cpp  alpha.h  main.cpp
examples/src/asteroids/: asteroid_component.h  asteroids.cpp  asteroids.h  main.cpp
examples/src/audio_play/: audio_play.cpp  audio_play.h  main.cpp
examples/src/balls/: ball.h  balls.cpp  balls.h  main.cpp
examples/src/bloke/: bloke.cpp  bloke.h  main.cpp
examples/src/collision_demo/: collision_demo.cpp  collision_demo.h  main.cpp
examples/src/fox/: CMakeLists.txt  fox.cpp  fox.h  main.cpp
examples/src/jumpy/: jumpy.cpp  jumpy.h  main.cpp
examples/src/mouse/: main.cpp  mouse.cpp  mouse.h
examples/src/rotation/: main.cpp  rotation.cpp  rotation.h
examples/src/runner/: camera_control.h  egg.h  main.cpp  runner.cpp  runner.h
examples/src/walk/: main.cpp  walk.cpp  walk.h
minomaly/: CMakeLists.txt
minomaly/common/: mino_common.h
minomaly/common/asset/: asset.h
minomaly/common/audio/: audio.cpp  audio.h
minomaly/common/bounding_box/: bounding_box.cpp  bounding_box.h
minomaly/common/color/: color.h
minomaly/common/fixed_matrix/: fixed_matrix.h
minomaly/common/font/: font.h
minomaly/common/json/: json.h  json_serializer.cpp  json_serializer.h  p_json_error.h  p_json_parser.h  p_json_serializer.h  p_json_utility.h  p_json_utils.h
minomaly/common/matrix/: matrix.cpp  matrix.h
minomaly/common/object_pool/: p_pool_item.h
minomaly/common/observer/: _observable.h
minomaly/common/quadtree/: quadtree.h
minomaly/common/rect/: rect.h
minomaly/common/scene/: scene.h
minomaly/common/sprite_animation/: sprite_animation.h
minomaly/common/surface/: surface.cpp  surface.h
minomaly/common/texture/: texture.cpp  texture.h
minomaly/common/vector2/: vector2.h
minomaly/component/: component.cpp  component.h  mino_component.h
minomaly/component/audio_player/: audio_player.cpp  audio_player.h
minomaly/component/box_collider/: box_collider.cpp  box_collider.h
minomaly/component/camera/: camera_component.cpp  camera_component.h
minomaly/component/collider/: collider.cpp  collider.h
minomaly/component/game_object/: game_object.cpp  game_object.h
minomaly/component/physics/: physics_component.cpp
minomaly/engine/: mino.h
minomaly/engine/core/: core.h  (+1 more)
src/: CMakeLists.txt
src/common/: mino_common.h
src/common/audio/: audio.cpp  p_managed_audio.h
src/common/bounding_box/: bounding_box.cpp  bounding_box.h
src/common/color/: color.h
src/common/font/: font.cpp  font.h
src/common/matrix/: matrix.cpp  matrix.errors.h  matrix.h
src/common/object_pool/: iterable_pool.h  p_pool_item.h
src/common/observer/: _observable.h  _subject.h  _subscription.h  observer.h
src/common/quadtree/: quadtree.cpp  quadtree.h
src/common/sdl/: sdl_subsystems.cpp  sdl_subsystems.h
src/common/surface/: surface.cpp  surface.h
src/common/texture/: p_managed_texture.h  texture.cpp  texture.h
src/common/vector2/: vector2.h
src/component/: component.cpp  component.h  mino_component.h
src/component/box_collider/: box_collider.cpp  box_collider.h
src/component/camera/: camera_component.cpp  camera_component.h
src/component/collider/: collider.cpp  collider.h
src/component/game_object/: game_object.cpp  game_object.h
src/component/physics/: physics_component.cpp  physics_component.h
src/component/renderer/: renderer.cpp  renderer.h
src/component/sprite_animator/: sprite_animator_component.cpp  sprite_animator_component.h
src/component/sprite_render/: sprite_render.cpp  sprite_render.h
src/component/sprite_renderer/: sprite_renderer.cpp  sprite_renderer.h
src/component/transform/: transform.cpp  transform.h
src/engine/: mino.h
src/engine/application/: application.cpp
src/engine/asset_system/: asset_system.cpp  asset_system.h
src/engine/audio_system/: audio_system.cpp  audio_system.h
src/engine/camera/: camera.cpp  camera.h
src/engine/core/: core.cpp  core.h  logic.h
src/engine/game_object/: game_object.cpp  game_object.h
src/engine/input/: input.cpp  input.h
src/engine/physics_system/: physics_system.cpp  physics_system.h
src/engine/program/: program.cpp  program.h
src/engine/render_system/: render_system.cpp  render_system.h  renderdata.h
src/engine/renderer/: renderdata.h  renderer.cpp  renderer.h
src/engine/scene/: scene.cpp  scene.h
src/engine/sdl_subsystems/: sdl_subsystems.cpp  sdl_subsystems.h
src/engine/time_system/: time_system.h
src/engine/window/: window.cpp  window.h
src/game_logic/__template/: main.cpp
src/game_logic/alpha/: alpha.cpp  alpha.h  main.cpp
src/game_logic/bloke/: bloke.cpp  main.cpp
src/game_logic/fox/: fox.cpp  fox.h  main.cpp
src/game_logic/rotation/: main.cpp  rotation.cpp  rotation.h
src/game_logic/spritesheet/: main.cpp  spritesheet.cpp  spritesheet.h
src/game_logic/walk/: CMakeLists.txt  main.cpp  walk.cpp  walk.h
src/services/: mino_services.h
src/services/log_service/: log_service.h
src/services/services/: p_service.h  services.cpp  services.h
src/services/time_service/: time_service.h
src/services/work_service/: work_service.h
testing/: CMakeLists.txt  main.cpp
testing/common/: test_bounding_box.cpp  test_fixed_matrix.cpp  test_json_parser.cpp  test_json_serializer.cpp  test_matrix.cpp  test_object_pool.cpp  test_quadtree.cpp
testing/component/: test_box_collider.cpp  test_game_object.cpp  test_game_object_component_integration.cpp  test_game_object_transform_integration.cpp  test_physics_component.cpp  test_ridigbody.cpp  test_rigidbody.cpp  test_sprite_renderer.cpp  test_transform.cpp
testing/engine/: test_application.cpp  test_core.cpp  test_engine_e2e.cpp  test_engine_e2e_physics.cpp  test_render_system.cpp  test_scene.cpp
testing/engine/core/: test_core.cpp  test_game_object.cpp
testing/services/: test_work_service.cpp
(+31 files in other folders)
